@@ -1,3 +1,7 @@
+2000-10-09  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* ld-selective/selective.exp: Rearrange to be table-driven.
+
 2000-10-07  Alan Modra  <alan@linuxcare.com.au>
 
 	* ld-scripts/phdrs.exp: hppa*64*-*-* is 64-bit ELF too.
